--- a/3rdparty/kdl/Makefile
+++ b/3rdparty/kdl/Makefile
@@ -11,12 +11,17 @@ CMAKE_ARGS = -DCMAKE_INSTALL_PREFIX=$(PWD)/kdl/ \
 		-DPYTHON_BINDINGS=ON \
 		-DKDL_PYTHON_INSTALL_PATH=$(PWD)/kdl/lib/
 
-build: SVN_UP_REVERT_PATCH kdl
+build: wiped SVN_UP kdl
 
 configured: $(SVN_DIR) Makefile
 	mkdir -p $(SVN_DIR)/build
 	cd $(SVN_DIR)/build && $(CMAKE) $(CMAKE_ARGS) ..
 	touch configured
+
+wiped: Makefile
+	make wipe
+	touch wiped
+	
 
 .PHONY: kdl
 kdl:	configured
