--- a/hardware_test/self_test/CMakeLists.txt
+++ b/hardware_test/self_test/CMakeLists.txt
@@ -5,4 +5,5 @@ rospack(self_test)
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 rospack_add_executable(selftest src/selftest.cpp)
+rospack_add_executable(selftest_server src/selftest_server.cpp)
 
