--- a/drivers/simulator/gazebo_plugin/CMakeLists.txt
+++ b/drivers/simulator/gazebo_plugin/CMakeLists.txt
@@ -12,6 +12,7 @@ rospack_add_library(Pr2_Gripper src/Pr2_Gripper.cc)
 rospack_add_library(Ros_Camera src/Ros_Camera.cc)
 rospack_add_library(Ros_Laser src/Ros_Laser.cc)
 rospack_add_library(Ros_Node src/Ros_Node.cc)
+rospack_add_library(Ros_PTZ src/Ros_PTZ.cc)
 rospack_add_library(P3D src/P3D.cc)
 rospack_add_library(gazebo_actuators src/gazebo_actuators.cpp)
 rospack_add_library(test_actuators src/test_actuators.cpp)
