--- a/drivers/motor/ethercat_hardware/CMakeLists.txt
+++ b/drivers/motor/ethercat_hardware/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 2.6)
 include(rosbuild)
 rospack(ethercat_hardware)
 add_definitions(-Wall)
-rospack_add_library(ethercat_hardware src/ethercat_hardware.cpp src/boards.cpp src/wg05.cpp src/ek1122.cpp)
+rospack_add_library(ethercat_hardware src/ethercat_hardware.cpp src/wg05.cpp src/ek1122.cpp)
