--- a/hardware_test/self_test/CMakeLists.txt
+++ b/hardware_test/self_test/CMakeLists.txt
@@ -4,6 +4,6 @@ rospack(self_test)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
-rospack_add_executable(selftest src/selftest.cpp)
-rospack_add_executable(selftest_server src/selftest_server.cpp)
+rospack_add_executable(run_selftest src/run_selftest.cpp)
+rospack_add_executable(selftest_example src/selftest_example.cpp)
 
